# tomd

./: .gitignore  Makefile  README.md  bundle.py  flake.nix  pyproject.toml  run.py  test.md
.github/workflows/: ci.yml
tomd/: article.py  cache.py  config.py  frontmatter.py  main.py  split.py  youtube.py
